 - Music wasn't pausing from S_SetMusicVolume if it was set to 0.
   Still buggy with intermission and intro.  Basically, S_ChangeMusic.
 - Fixed the math for endmsg.  Was skipping over the "are you sure you want to
   quit this great game?" message.  Code from Chocolate Doom.
 - Now shows the "Picked up a healthkit that you really need!" message.

09-14-13
 - Added Fullscreen Ammo, Armor, Health, and Keycards.
 - Imported the Cyberman/Tactile stuff from Heretic.
 - Added the original mprintf from DOS Doom.
 - Original gamemode determination banners, WATCOM specific stuff.
 - linear.asm from Heretic.  Might have some faster drawing on
   some 486-era stuff?
 - Joystick support working.
 - Fixed bug with joystick super speed.
 - Fixed byte *savep warning.
 - DOOM.WAD will search for Episode 4 and auto-load Ultimate Doom.
   Can be overridden with -doom parameter.
 - Fixed endstring/quit messages to work for proper gamemodes.
 - Palette Flashing toggle is now read from config.
 - Fixed Final Doom map names in Automap.
 - Fixed snd_SfxVolume multiplier shit. (it was shitty!)
 - From Heretic:
   * Hold down ESC during startup to abort execution of the game.
 - Checks for unnaturally high volume levels.
 - Fixed Plutonia and TNT (Final Doom) intermission text.
 - Fixed drawing a number for Fist and Chainsaw in Fullscreen.
 - Delete save games from Load and Save Menu by pressing delete.
 - Bumped SAVEGAMESIZE to ~1MB and SAVESTRINGSIZE from 24 to 256.
   Not sure if there is any stock Final Doom, etc. maps with a save
   issue, but can't hurt!
 - Disabled RANGECHECK ifdef.  Plutonia gave a bomb walking down a
   dark hallway with it.  I may turn it into a M_CheckParm at some point.

09-13-13
 - Fixed out of control input.
 - From Heretic v1.3a port:
   * P_SetMessage function.
   * New coop rules (keep keys, weapons, backpack).
   * Secret Area found message.
   * Massacre Cheat.
   * HHSCOTT Cheat -- instantly finish level.