@@ -41,9 +41,6 @@
 #define DEVMAPS "devmaps"
 #define DEVDATA "devdata"
 
-
-// Not done in french?
-
 // QuitDOOM messages
 #define NUM_QUITMESSAGES   8
 
